--- a/games/main.css
+++ b/games/main.css
@@ -684,7 +684,10 @@ nav {
         margin: 10px;
     }
     #ballfall-canvas{
-        width: 340px;
+        width: 300px;
+    }
+    .ballfall-body{
+        margin: 15px;
     }
   }
   @media screen and (max-width: 300px){ 
